<resources>
    <string name="app_name">Read&amp;Share</string>
    <string name="navigation_drawer_open">Open navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="title_activity_message">Message</string>
    <string name="received">received</string>
    <string name="sent">sent</string>
    <string name="title_activity_library">Library</string>
    <string name="library">library</string>
    <string name="history">history</string>
    <string name="traceability">traceability</string>
    <string name="recommendation">Recommendation</string>
    <string name="mieux_note">Mieux note</string>
    <string name="derniers_livres">Derniers livres</string>
    <string name="titre">Titre : </string>
    <string name="auteur">Auteur : </string>
    <string name="genre">Genre : </string>
    <string name="date">Date: </string>
    <string name="description">Description : </string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="login">login</string>
    <string name="firstName">FirstName</string>
    <string name="lastName">LastName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="sign_in">Sign in </string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="cancel">CANCEL</string>
    <string name="romance">romance</string>
    <string name="comedy">comedy</string>
    <string name="fantasy">fantasy</string>
    <string name="slice_of_life">slice of life</string>
    <string name="horror">horror</string>
    <string name="sport">sport</string>
    <string name="sci_fi">sci-fi</string>
    <string name="heart_warming">heart-warming</string>
    <string name="super_hero">super hero</string>
    <string name="drama">drama</string>
    <string name="action">action</string>
    <string name="thriller">thriller</string>
    <string name="crime">crime</string>
    <string name="informative">informative</string>
    <string name="titre_livre">Titre</string>
    <string name="auteur_livre">Auteur</string>
    <string name="genre_livre">Genre</string>
    <string name="description_livre">Description</string>
    <string name="add_book">ADD BOOK </string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>
    <string name="send_request">Send Request</string>
    <string name="request">Request</string>
    <string name="update_changes">update changes </string>
    <string name="city">City</string>
    <string name="tel">Tel</string>
    <string name="title_activity_bibliotheque">bibliotheque</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

</resources>
